# ansible-ad

./: .gitignore  NOTES.md  README.md  ansible-playbook.sh  ansible.cfg  autogen.sh  collect-facts.yml  fedora-client.yml  fmt  include.sh  kinit.sh  klist.sh  krb5.conf  linux-infra.yml  pyproject.toml  requirements.txt  site.yml  windows-ad-domain-joiners.yml  windows-ad-features.yml  windows-ad-groups.yml  windows-ad-initialize.yml  windows-ad-linux.yml  windows-ad-objects-autofs.yml  windows-ad-objects-sudoers.yml  windows-ad-policy.yml  windows-ad-schema.yml  windows-ad-serviceaccounts.yml  windows-ad-users.yml  windows-adcs.yml  windows-bitlocker.yml  windows-checkidentity.yml  windows-client.yml  windows-common.yml  windows-configure-dns.yml  windows-pull.yml  windows-roaming-user-profiles.yml
.autogen.d/: 01virtualenv.sh
.githooks/: pre-commit
files/: create-local-homedir.sh  sudo.schema
files/authselect/sssd-ext/: README  README.md  REQUIREMENTS  fingerprint-auth  password-auth  smartcard-auth  system-auth
files/etc/: issue
files/patches/pam_mount/: 0001-Add-ignoresource-option.patch
files/psrepository/: README.md
files/psrepository/Modules/ADCSTemplate/1.0.1.1/: ADCSTemplate.nuspec  ADCSTemplate.psd1  [Content_Types].xml
files/psrepository/Modules/ADCSTemplate/1.0.1.1/_rels/: .rels
files/usr/local/sbin/: create-local-homedir.sh
inventory/: inventory
inventory/group_vars/: ad_servers.yml  all.yml
inventory/group_vars/all/: all.yml  passwords.yml
kickstarts/: README.md
kickstarts/rhel9-cloudinit/: ks.cfg
kickstarts/rhel9-rhsm/: ks.cfg
kickstarts/rhel9-tang/: ks.cfg
